--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -1,5 +1,5 @@
 ///
-/// Editorial by HTML5 UP
+/// Forty by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -8,14 +8,66 @@
 
 	form {
 		margin: 0 0 _size(element-margin) 0;
+
+		.field {
+			margin: 0 0 (_size(element-margin) * 1) 0;
+
+			&.half {
+				width: 50%;
+				float: left;
+				padding: 0 0 0 (_size(element-margin) * 1 * 0.5);
+
+				&.first {
+					padding: 0 (_size(element-margin) * 1 * 0.5) 0 0;
+				}
+			}
+		}
+
+		> .actions {
+			margin: (_size(element-margin) * 1.25) 0 0 0 !important;
+		}
+
+		@include breakpoint(small) {
+			.field {
+				margin: 0 0 (_size(element-margin) * 0.75) 0;
+
+				&.half {
+					padding: 0 0 0 (_size(element-margin) * 0.75 * 0.5);
+
+					&.first {
+						padding: 0 (_size(element-margin) * 0.75 * 0.5) 0 0;
+					}
+				}
+			}
+
+			> .actions {
+				margin: (_size(element-margin) * 1) 0 0 0 !important;
+			}
+		}
+
+		@include breakpoint(xsmall) {
+			.field {
+				&.half {
+					width: 100%;
+					float: none;
+					padding: 0;
+
+					&.first {
+						padding: 0;
+					}
+				}
+			}
+		}
 	}
 
 	label {
 		color: _palette(fg-bold);
 		display: block;
-		font-size: 0.9em;
+		font-size: 0.8em;
 		font-weight: _font(weight-bold);
+		letter-spacing: _font(letter-spacing-alt);
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		text-transform: uppercase;
 	}
 
 	input[type="text"],
@@ -27,10 +79,9 @@
 	select,
 	textarea {
 		@include vendor('appearance', 'none');
-		background: _palette(bg);
-		border-radius: _size(border-radius);
+		background: _palette(border-bg);
 		border: none;
-		border: solid 1px _palette(border);
+		border-radius: 0;
 		color: inherit;
 		display: block;
 		outline: 0;
@@ -43,8 +94,8 @@
 		}
 
 		&:focus {
-			border-color: _palette(accent);
-			box-shadow: 0 0 0 1px _palette(accent);
+			border-color: _palette(highlight);
+			box-shadow: 0 0 0 2px _palette(highlight);
 		}
 	}
 
@@ -101,20 +152,18 @@
 			color: _palette(fg);
 			cursor: pointer;
 			display: inline-block;
-			font-size: 1em;
 			font-weight: _font(weight);
-			padding-left: (_size(element-height) * 0.6) + 0.75em;
+			padding-left: (_size(element-height) * 0.6) + 1em;
 			padding-right: 0.75em;
 			position: relative;
 
 			&:before {
-				background: _palette(bg);
-				border-radius: _size(border-radius);
-				border: solid 1px _palette(border);
+				background: _palette(border-bg);
 				content: '';
 				display: inline-block;
 				height: (_size(element-height) * 0.6);
 				left: 0;
+				letter-spacing: 0;
 				line-height: (_size(element-height) * 0.575);
 				position: absolute;
 				text-align: center;
@@ -126,16 +175,15 @@
 		&:checked + label {
 			&:before {
 				background: _palette(fg-bold);
-				border-color: _palette(fg-bold);
-				color: _palette(bg);
+				border-color: _palette(highlight);
 				content: '\f00c';
+				color: _palette(bg);
 			}
 		}
 
 		&:focus + label {
 			&:before {
-				border-color: _palette(accent);
-				box-shadow: 0 0 0 1px _palette(accent);
+				box-shadow: 0 0 0 2px _palette(highlight);
 			}
 		}
 	}
@@ -143,7 +191,6 @@
 	input[type="checkbox"] {
 		& + label {
 			&:before {
-				border-radius: _size(border-radius);
 			}
 		}
 	}
