--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,21 +1,43 @@
 /*
-	Editorial by HTML5 UP
+	Forty by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Button */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
 	.button {
-		border: solid 2px #f56a6a;
+		border: solid 2px !important;
 	}
 
-/* Posts */
+		.button.next {
+			padding-right: 1.75em;
+		}
 
-	.posts article {
-		width: 40%;
+			.button.next:before, .button.next:after {
+				display: none;
+			}
+
+/* Tiles */
+
+	.tiles article {
+		width: 50%;
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+		background-size: cover;
+	}
+
+/* Banner */
+
+	#banner {
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+	}
+
+		#banner:after {
+			display: none;
+		}
+
+/* Menu */
+
+	#menu {
+		background: #242943;
 	}
