--- a/assets/sass/components/_list.scss
+++ b/assets/sass/components/_list.scss
@@ -1,5 +1,5 @@
 ///
-/// Editorial by HTML5 UP
+/// Forty by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -52,53 +52,11 @@
 				&:last-child {
 					padding-right: 0;
 				}
-
-				.icon {
-					color: inherit;
-
-					&:before {
-						font-size: 1.25em;
-					}
-				}
 			}
-		}
 
-		&.contact {
-			list-style: none;
-			padding: 0;
-
-			li {
-				@include icon;
-				border-top: solid 1px _palette(border);
-				margin: 1.5em 0 0 0;
-				padding: 1.5em 0 0 3em;
-				position: relative;
-
-				&:before {
-					color: _palette(accent);
-					display: inline-block;
-					font-size: 1.5em;
-					height: 1.125em;
-					left: 0;
-					line-height: 1.125em;
-					position: absolute;
-					text-align: center;
-					top: (1.5em / 1.5);
-					width: 1.5em;
-				}
-
-				&:first-child {
-					border-top: 0;
-					margin-top: 0;
-					padding-top: 0;
-
-					&:before {
-						top: 0;
-					}
-				}
-
-				a {
-					color: inherit;
+			@include breakpoint(small) {
+				li {
+					padding: 0 0.75em 0 0;
 				}
 			}
 		}
@@ -120,7 +78,7 @@
 
 			&.small {
 				li {
-					padding: 0 (_size(element-margin) * 0.25) 0 0;
+					padding: 0 (_size(element-margin) * 0.5) 0 0;
 				}
 			}
 
@@ -140,8 +98,6 @@
 
 				&.small {
 					li {
-						padding: (_size(element-margin) * 0.25) 0 0 0;
-
 						&:first-child {
 							padding-top: 0;
 						}
@@ -166,11 +122,11 @@
 				}
 
 				&.small {
-					margin-left: (_size(element-margin) * -0.25);
-					width: calc(100% + #{(_size(element-margin) * 0.25)});
+					margin-left: (_size(element-margin) * -0.5);
+					width: calc(100% + #{(_size(element-margin) * 0.5)});
 
 					li {
-						padding: 0 0 0 (_size(element-margin) * 0.25);
+						padding: 0 0 0 (_size(element-margin) * 0.5);
 					}
 				}
 			}
@@ -192,27 +148,27 @@
 						'color #{_duration(transition)} ease-in-out'
 					));
 					border-bottom: 0;
-					border-radius: _size(border-radius);
 					display: inline-block;
 					font-size: 0.8em;
 					font-weight: _font(weight-bold);
-					height: 2em;
-					line-height: 2em;
+					height: 1.5em;
+					line-height: 1.5em;
 					margin: 0 0.125em;
-					min-width: 2em;
+					min-width: 1.5em;
 					padding: 0 0.5em;
 					text-align: center;
 
 					&.active {
-						background-color: _palette(accent);
-						color: _palette(bg) !important;
+						background-color: _palette(fg-bold);
+						color: _palette(bg);
 
 						&:hover {
-							background-color: lighten(_palette(accent), 3);
+							background-color: _palette(highlight);
+							color: _palette(bg) !important;
 						}
 
 						&:active {
-							background-color: darken(_palette(accent), 3);
+							background-color: desaturate(darken(_palette(highlight), 15), 5);
 						}
 					}
 				}
