--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -4,25 +4,47 @@
 @import 'libs/skel';
 
 /*
-	Editorial by HTML5 UP
+	Forty by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Button */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
 	.button {
-		border: solid 2px _palette(accent);
+		border: solid 2px !important;
+
+		&.next {
+			padding-right: 1.75em;
+
+			&:before, &:after {
+				display: none;
+			}
+		}
 	}
 
-/* Posts */
+/* Tiles */
 
-	.posts {
+	.tiles {
 		article {
-			width: 40%;
+			width: 50%;
+			-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+			background-size: cover;
 		}
+	}
+
+/* Banner */
+
+	#banner {
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+
+		&:after {
+			display: none;
+		}
+	}
+
+/* Menu */
+
+	#menu {
+		background: _palette(bg);
 	}
