--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -4,81 +4,112 @@
 @import 'libs/skel';
 
 /*
-	Editorial by HTML5 UP
+	Forty by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Features */
+/* Spotlights */
 
-	.features {
-		&:after {
-			clear: both;
-			content: '';
-			display: block;
-		}
-
-		article {
-			float: left;
-
+	.spotlights {
+		> section {
 			&:after {
-				clear: both;
 				content: '';
 				display: block;
+				clear: both;
 			}
 
-			.icon {
+			> .image {
+				float: left;
+			}
+
+			> .content {
 				float: left;
 			}
 		}
 	}
 
-/* Posts */
+/* Tiles */
 
-	.posts {
+	.tiles {
 		&:after {
-			clear: both;
 			content: '';
 			display: block;
+			clear: both;
 		}
 
 		article {
+			@include padding(8em, 4em);
 			float: left;
+			height: auto;
+			max-height: none;
+			min-height: 0;
 		}
 	}
 
-/* Main */
+/* Header */
 
-	#main {
-		padding-left: _size(sidebar-width-alt);
-	}
+	#header {
+		.logo {
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
 
-/* Sidebar */
-
-	#sidebar {
-		position: absolute;
-		top: 0;
-		left: 0;
-		min-height: 100%;
-		width: _size(sidebar-width-alt);
+		nav {
+			position: absolute;
+			top: 0;
+			right: 0;
+		}
 	}
 
 /* Banner */
 
 	#banner {
+		@include padding(6em, 0, (1em, 0, 0, 0));
+		background-attachment: scroll;
+		height: auto;
+		max-height: none;
+		min-height: 0;
+
+		> .inner {
+			.content {
+				display: block;
+
+				> * {
+					margin-left: 0;
+					margin: 0 0 _size(element-margin) 0;
+				}
+			}
+		}
+
+		&.major {
+			height: auto;
+			max-height: none;
+			min-height: 0;
+		}
+	}
+
+/* Contact */
+
+	#contact {
 		&:after {
-			clear: both;
 			content: '';
 			display: block;
+			clear: both;
 		}
 
-		.content {
-			float: left;
-			padding-right: (_size(element-margin) * 2);
+		> .inner {
+			> * {
+				float: left;
+			}
 		}
+	}
 
-		.image {
-			float: left;
-			margin-left: 0;
+/* Menu */
+
+	#menu {
+		.inner {
+			margin: 0 auto;
 		}
 	}
