--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3978,11 +3978,28 @@
 		visibility: visible;
 	}
 
-		body.is-menu-visible #menu .inner {
-			-moz-transform: none;
-			-webkit-transform: none;
-			-ms-transform: none;
-			transform: none;
-			opacity: 1;
-			visibility: visible;
-		}
+	body.is-menu-visible #menu .inner {
+		-moz-transform: none;
+		-webkit-transform: none;
+		-ms-transform: none;
+		transform: none;
+		opacity: 1;
+		visibility: visible;
+	}
+
+	nav {
+		background-color: #363d63 !important;
+	}
+
+	.navbar-default {
+		background-image: none !important;
+		border-color: #363d63;
+	}
+
+	.button.special {
+		text-align: center;
+	}
+
+	.center-span {
+		text-align: center;
+	}
