started upload image function

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1945,6 +1945,7 @@
 	input[type="tel"],
 	input[type="search"],
 	input[type="url"],
+	input[type="file"],
 	select,
 	textarea {
 		-moz-appearance: none;
@@ -1968,6 +1969,7 @@
 		input[type="tel"]:invalid,
 		input[type="search"]:invalid,
 		input[type="url"]:invalid,
+		input[type="file"]:invalid,
 		select:invalid,
 		textarea:invalid {
 			box-shadow: none;
@@ -1979,6 +1981,7 @@
 		input[type="tel"]:focus,
 		input[type="search"]:focus,
 		input[type="url"]:focus,
+		input[type="file"]:focus,
 		select:focus,
 		textarea:focus {
 			border-color: #9bf1ff;
@@ -2024,6 +2027,7 @@
 	input[type="tel"],
 	input[type="search"],
 	input[type="url"],
+	input[type="file"],
 	select {
 		height: 2.75em;
 	}
