--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1677,18 +1677,19 @@
 		-webkit-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-		border-bottom: dotted 1px;
+		border-bottom: none;
 		color: inherit;
 		text-decoration: none;
 	}
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #9bf1ff !important;
+			color: white;
+			text-decoration: none;
 		}
 
 		a:active {
-			color: #53e3fb !important;
+			color: #53e3fb;
 		}
 
 	strong, b {
