--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,3 +1,11 @@
+/*
+ *  Team Red Hot Chili Jellos
+ *  Chris Barbour, Ramona Graham, Josh Lyon, Hillary Wagoner
+ *  File: login.css
+ *  Purpose: This file formats the input boxes on the login.php form.
+ *
+ */
+
 form .field {
     display: block;
 }
