--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,3 +1,10 @@
+/*
+ *  Team Red Hot Chili Jellos
+ *  Chris Barbour, Ramona Graham, Josh Lyon, Hillary Wagoner
+ *  File: navbar.css
+ *  Purpose: This file formats the navbar in the header.inc.php.
+ */
+
 .button.special.active {
     background-color: #A9A9A9;
     color: black;
