--- a/assets/css/postblog.css
+++ b/assets/css/postblog.css
@@ -1,3 +1,10 @@
+/*
+ *  Team Red Hot Chili Jellos
+ *  Chris Barbour, Ramona Graham, Josh Lyon, Hillary Wagoner
+ *  File: postblog.css
+ *  Purpose: This file formats the blogs in postblog.php.
+ */
+
 input[type="text"],
 input[type="file"] {
     width: 50%;
